# mirage-fit

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  deny.toml  docker-compose.yml
docs/: index.html
examples/: remix_test.rs
specs/: 0001-nano-banana.md  0002-spec.md  0003-tshirt-color-variants.md  instructions.md
src/: config.rs  error.rs  file_manager.rs  gemini.rs  handlers.rs  lib.rs  main.rs  models.rs  server.rs  static_files.rs  validation.rs
tests/: integration.rs
tools/: test_upload.py
ui/: README.md  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: CategoryCarousel.tsx  CategorySection.tsx  CentralCharacter.tsx  ErrorBoundary.tsx  GeneratedImageGallery.tsx  GeneratedRemixes.tsx  ImageGallery.tsx  ImageSelectionLayout.tsx  PhotoUploadArea.tsx  RemixControls.tsx  SelectedItemsSection.tsx
ui/src/components/__tests__/: ErrorBoundary.test.tsx  PhotoUploadArea.test.tsx
ui/src/components/ui/: LoadingSpinner.tsx
ui/src/components/ui/__tests__/: LoadingSpinner.test.tsx  button.test.tsx  dialog.test.tsx  input.test.tsx
ui/src/services/: api.ts
ui/src/store/: appStore.ts
ui/src/test/: README.md  accessibility.test.tsx  setup.ts  test-utils.tsx
ui/src/types/: api.ts
